--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,7 +1,7 @@
 .nav {
   .nav-title {
     font-family: 'Roboto Mono', monospace;
-    color: darkcyan;
+    color: #9ACD32;
   }
   .nav-links {
     display: flex;
