--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -7,7 +7,7 @@
 
   .dashboard-space-one {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     // background-color: #5F9EA0;
     height: 100%;
 
@@ -16,16 +16,25 @@
       width: 100%;
       height: 100%;
       position: relative;
-      // border: 2px solid rgb(173, 162, 162);
       margin-top: 20px;
       padding-left: 10px;
       padding-right: 10px;
 
       .boxes {
+        @include base-border-radius();
+
         padding: 10px;
-        margin: 5px;
+        margin-bottom: 5px;
         background-color: #FAEBD7;
         font-weight: 700;
+        border: 1px solid #DAA520;
+      }
+
+      .dashboard-info {
+        @include base-border-radius();
+
+        padding: 5px;
+        background-color: #FFF0F5;
       }
     }
   }
