--- a/src/styles/month.scss
+++ b/src/styles/month.scss
@@ -1,16 +1,19 @@
 .month-container {
   @include base-border-radius();
 
-  border: 2px solid green;
 
   h3 {
     @include base-border-radius();
 
     background-color: #FAEBD7;
-    margin: 10px;
+    border: 1px solid #DAA520;
+    margin: 5px;
+    padding: 5px;
   }
 
   .month-summary {
+    @include base-border-radius();
+    background-color: #FFF0F5;
     padding: 10px;
     font-weight: 500;
   }
