--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,16 +1,33 @@
 .nav {
+  background-color: #E6E6FA;
+  padding: 10px;
   .nav-title {
-    font-family: 'Roboto Mono', monospace;
-    color: #9ACD32;
+    font-family: 'Trade Winds', cursive;
+    color: #4B0082;
   }
   .nav-links {
+    font-family: 'Kanit', sans-serif;
     display: flex;
-    justify-content: center;
     font-size: 1.5em;
-    a {
-      text-decoration: none;
-      color: darkblue;
-      padding: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(12, 12, 12);
+
+    
+    .nav-single {
+      a {
+        text-decoration: none;
+        color: #4B0082;
+        margin: 20px;
+
+        &:hover {
+          color: #48D1CC;
+        }
+      }
+
+      .nav-link-active {
+        border-bottom: 1.5px solid #48D1CC;
+        color: #48D1CC;
+      }
     }
   }
 }
