--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,10 @@
 
 body {
   background-color: #E6E6FA;
+  // display: flex;
+  // overflow-x: auto;
+  // white-space: nowrap;
+  // padding: 10px
 }
 
 .App {
