--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -42,3 +42,12 @@
     }
   }
 }
+
+@media(max-width: 500px) {
+  .dashboard-container {
+    .dashboard-space-one {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+  }
+}
