--- a/src/styles/month.scss
+++ b/src/styles/month.scss
@@ -17,10 +17,10 @@
         font-family: 'Mukta Vaani', sans-serif;
         // height: 10%;
         // width: 20%;
-        background-color: darkcyan;
-        color: white;
+        color: #48D1CC;
         margin: 5px;
         padding: 10px;
+        font-size: 2em;
       }
     }
   }
