--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,9 @@
 
 body {
   background-color: #E6E6FA;
-  // display: flex;
-  // overflow-x: auto;
-  // white-space: nowrap;
-  // padding: 10px
+  display: grid;
+  width: 100%;
+  grid-auto-columns: 1fr;
 }
 
 .App {
