--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,4 +1,5 @@
 .nav {
+  width: 100%;
   background-color: #E6E6FA;
   padding: 10px;
   .nav-title {
@@ -28,6 +29,15 @@
         border-bottom: 1.5px solid #48D1CC;
         color: #48D1CC;
       }
+    }
+  }
+}
+
+@media(max-width: 500px) {
+  .nav {
+    .nav-links {
+      display: grid;
+      grid-row: 1fr;
     }
   }
 }
