--- a/src/styles/month.scss
+++ b/src/styles/month.scss
@@ -17,7 +17,7 @@
         font-family: 'Mukta Vaani', sans-serif;
         // height: 10%;
         // width: 20%;
-        color: #48D1CC;
+        color: black;
         margin: 5px;
         padding: 10px;
         font-size: 2em;
@@ -42,6 +42,7 @@
 
       p {
         padding: 10px;
+        font-size: 1.5em;
       }
     
     }
