--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -4,7 +4,7 @@
   padding: 10px;
   .nav-title {
     font-family: 'Trade Winds', cursive;
-    color: #4B0082;
+    color: black;
   }
   .nav-links {
     font-family: 'Kanit', sans-serif;
@@ -17,7 +17,7 @@
     .nav-single {
       a {
         text-decoration: none;
-        color: #4B0082;
+        color: black;
         margin: 20px;
 
         &:hover {
