--- a/src/styles/pageStyles/home.scss
+++ b/src/styles/pageStyles/home.scss
@@ -2,7 +2,7 @@
   display: block;
 
   .home-title {
-    color: darkcyan;
+    color: black;
   }
 
   .links-container {
@@ -12,9 +12,11 @@
 
     .single-link {
       padding: 10px;
+      margin: 15px;
+      background: #c3c3eb;
+      box-shadow: 5px 10px #a5a5d6;
 
       .home-container {
-
         h3 {
           @include base-border-radius();
           font-family: 'Mukta Vaani', sans-serif;
