--- a/src/styles/pageStyles/home.scss
+++ b/src/styles/pageStyles/home.scss
@@ -14,7 +14,8 @@
       padding: 10px;
       margin: 15px;
       background: #c3c3eb;
-      box-shadow: 5px 10px #a5a5d6;
+      box-shadow: 5px 10px #444453;
+      border-radius: 5px;
 
       .home-container {
         h3 {
