--- a/src/styles/pageStyles/dashboard.scss
+++ b/src/styles/pageStyles/dashboard.scss
@@ -1,55 +1,74 @@
-.dashboard-container {
+// DASHBOARD
+.dashboard {
   display: block;
 
   h3 {
     color: darkcyan;
   }
+}
 
-  .dashboard-space-one {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr 2fr;
-    justify-content: center;
-    height: 500px;
-    width: 100%;
+// DASHBOARD NAV
+.dashboard-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding: 10px;
+  background: black;
+  // border-bottom: 1.5px solid #48D1CC;
+  
+  .dashboard-links {
+    font-size: 1.2em;
+    padding: 10px;
+    font-family: 'Kanit', sans-serif;
 
-    // .dashboard-space-container {
-    //   display: grid;
-
-    // }
-
-    .dashboard-space-two {
-      padding: 20px;
-      height: 20vh;
+    
+    a {
+      text-decoration: none;
+      color: white;
       
-      .dashboard-heading {
-        @include base-border-radius();
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        height: 10%;
-        padding: 10px;
-        margin-bottom: 5px;
-        background-color: black;
-        color: white;
-        font-weight: 700;
-        // border: 1px solid rgb(0, 0, 0);
-      }
+      &:hover {
+        color: #48D1CC;
+      }      
+    }
+    .nav-link-active {
+      color: #48D1CC;
+    }
+  }
+}
 
-      .dashboard-info {
-        @include base-border-radius();
-        padding: 5px 30px;
-        background-color: #c3c3eb;
-        border-top-left-radius: 25px;
-        height: 70%;
+// DASHBOARD PAGES
+.dashboard-space-two {
+  height: 90vh;
+  padding: 20px;
+  .dashboard-heading {
+    font-size: 2em;
+    font-family: 'Kanit', sans-serif;
+  }
 
-        p {
-          height: 50%;
+  .dashboard-info {
+
+    .dashboard-flex {
+      display: grid;
+      justify-content: center;
+      div {
+        display: flex;
+        h2  {
           padding: 10px;
         }
       }
+
+      .dashboard-date {
+      }
+      .dashboard-account {
+      }
+    }
+    p {
+      height: 30px;
+      width: 100%;
+      font-size: 1.2em;
     }
   }
+  
 }
 
 @media(max-width: 500px) {
